--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="theme-color" content="">
     
-<link rel="amphtml" href="https://www.88dewikk.com/">
+<link rel="amphtml" href="https://citigirlx.shop/amp/">
     <link rel="canonical" href="http://88dewi-id.arrayfire.org/"><link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin><title>
       88Dewi Situs slot Deposit Pulsa Tanpa Potongan
  &ndash; My Store</title>
